# hltv-api

./: .env.example  .gitignore  Dockerfile  README.md  b64.py  docker-compose.yml  fly.toml  hltv_matches_debug.html  pyproject.toml  requirements.txt  test.py  test2.py
app/: main.py  settings.py
app/api/: api.py
app/api/endpoints/: events.py  matches.py  players.py  ranking.py  teams.py
app/schemas/: base.py
app/schemas/events/: profile.py  results.py  search.py  teamStats.py  team_stats.py
app/schemas/matches/: liveMatches.py  live_matches.py  stats.py  todayMatches.py  today_matches.py
app/schemas/players/: Achievements.py  __init__.py  careerStats.py  career_stats.py  personalAchievements.py  personal_achievements.py  profile.py  search.py  stats.py  teamAchievements.py  team_achievements.py  trophies.py
app/schemas/ranking/: stats.py
app/schemas/teams/: achievements.py  profile.py  results.py  search.py  upcomingMatches.py  upcoming_matches.py
app/services/: base.py
app/services/events/: profile.py  results.py  search.py  teamStats.py  team_stats.py
app/services/matches/: liveMatches.py  live_matches.py  stats.py  todayMatches.py  today_matches.py
app/services/players/: achievements.py  careerStats.py  career_stats.py  personalAchievements.py  personal_achievements.py  profile.py  search.py  stats.py  (+3 more)
app/utils/: notifications.py  ntf.py  utils.py  xpath.py
app/xpaths/: events.py  matches.py  players.py  teams.py
tests/: TEST3.PY  conftest.py  fixtures.py  search.py  test.py  test_events.py  test_matches.py  test_players.py  test_ranking.py  test_teams.py
(+7 files in other folders)
