[project]
name = "hltv-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "lxml>=6.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
hltv-api = "app.main:main"

[tool.ty.environment]
python = ".venv"

[dependency-groups]
dev = ["ruff>=0.15.12", "ty>=0.0.34"]
